[package]
name = "glyph"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
regex = "1.12.3"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["catch-panic", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
http-body-util = { version = "0.1.3", features = ["full"] }
